--- a/style.css
+++ b/style.css
@@ -3,12 +3,26 @@
 :root{
     --main-color:#c57276;
     --black:black;
-    --bg:linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    --border:.1rem solid rgba(242, 183, 20, 0.3);
+    --bg:linear-gradient(90deg, rgb(241, 225, 233) 0%, rgb(230, 230, 230) 100%);
+    --border:.1rem solid rgba(179, 177, 172, 0.3);
 
     /* --background: rgb(238,174,202);
     --bg: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);  */
 
+}
+
+
+*,
+*::after,
+*::before{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+
+.html{
+    font-size: 62.5%;
 }
 
 *{
@@ -33,15 +47,201 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-.container {
+
+
+
+
+
+/* Additional Nav */
+
+.navbar input[type="checkbox"],
+.navbar .hamburger-lines{
+    display: none;
+}
+
+.container{
+    max-width: 1200px;
+    width: 90%;
+    margin: auto;
+}
+
+.navbar{
+    box-shadow: 0px 5px 10px 0px #aaa;
+    position: fixed;
+    width: 100%;
+    background: #fff;
+    color: #000;
+    opacity: 0.85;
+    z-index: 100;
+}
+
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    height: 64px;
+    align-items: center;
+}
+
+.menu-items{
+    order: 2;
+    display: flex;
+}
+.logo{
+    order: 1;
+    font-size: 2.3rem;
+}
+
+.menu-items li{
+    list-style: none;
+    margin-left: 1.5rem;
+    font-size: 1.3rem;
+}
+
+.navbar a{
+    color: #444;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar a:hover{
+    color: #117964;
+}
+
+@media (max-width: 768px){
+    .navbar{
+        opacity: 0.95;
+    }
+
+    .navbar-container input[type="checkbox"],
+    .navbar-container .hamburger-lines{
+        display: block;
+    }
+
+    .navbar-container{
+        display: block;
+        position: relative;
+        height: 64px;
+    }
+
+    .navbar-container input[type="checkbox"]{
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 30px;
+        top: 20px;
+        left: 20px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+    .navbar-container .hamburger-lines{
+        display: block;
+        height: 28px;
+        width: 35px;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .navbar-container .hamburger-lines .line{
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: #333;
+    }
+    
+    .navbar-container .hamburger-lines .line1{
+        transform-origin: 0% 0%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line2{
+        transition: transform 0.2s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line3{
+        transform-origin: 0% 100%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar .menu-items{
+        padding-top: 100px;
+        background: #fff;
+        height: 100vh;
+        max-width: 300px;
+        transform: translate(-150%);
+        display: flex;
+        flex-direction: column;
+        margin-left: -40px;
+        padding-left: 40px;
+        transition: transform 0.5s ease-in-out;
+        box-shadow:  5px 0px 10px 0px #aaa;
+        overflow: scroll;
+    }
+
+    .navbar .menu-items li{
+        margin-bottom: 1.8rem;
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+
+    .logo{
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: 2.5rem;
+    }
+
+    .navbar-container input[type="checkbox"]:checked ~ .menu-items{
+        transform: translateX(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1{
+        transform: rotate(45deg);
+    }
+
+    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2{
+        transform: scaleY(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3{
+        transform: rotate(-45deg);
+    }
+
+}
+
+@media (max-width: 500px){
+    .navbar-container input[type="checkbox"]:checked ~ .logo{
+        display: none;
+    }
+}
+
+/* Additional Nav */
+
+
+
+
+
+
+
+
+
+/* .container {
   background: #ffbdc9;
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-nav {
+} */
+/* nav {
   background: #fff;
   border-radius: 50px;
   padding: 10px;
@@ -60,6 +260,9 @@ nav ul li {
   z-index: 2;
   transition: color 0.5s;
 }
+
+
+
 nav ul li::after {
   content: "";
   background: #f44566;
@@ -137,7 +340,7 @@ nav ul li:hover {
 nav ul li:hover::after {
   top: 50%;
   opacity: 1;
-}
+} */
 
 
 
@@ -257,7 +460,7 @@ section{
     
     margin:0 1rem;
     font-size: 1.6rem;
-    color:white;;
+    color:white;
 }
 
 .header .navbar a:hover{
@@ -299,10 +502,6 @@ section{
     margin-top:4px;
 }
 
-.header{
-    background-color: rgb(172, 169, 164);
-
-}
 
 
 .home{
@@ -933,7 +1132,7 @@ margin-right:20px;
   .main h1{
     text-align:center;
    
-    color: #f0e807; 
+    color: #6c07f0; 
     font-size: 4rem;
     font-family: 'Arvo', serif;
   }
@@ -957,11 +1156,12 @@ margin-right:20px;
     font-style: italic;
     letter-spacing: 1rem;
     margin-top: 0;
-    color: #A8DADC;
+    color: #050505;
     
   }
   
   .roller #rolltext {
+    color: #c57276;
     position: absolute;
     top: 0;
     animation: slide 5s infinite;  
